--- a/src/templates/story/story.scss
+++ b/src/templates/story/story.scss
@@ -58,7 +58,7 @@
   width: 100%;
 
   @include desktop {
-    height: calc(100vh - ($header-height + rem(108px)));
+    height: calc(100vh - ($header-height-desktop + rem(70px)));
     width: auto;
   }
 }
