--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,9 +3,9 @@
 $html-font-size: 16px;
 
 $body-padding: rem(15px);
-$body-padding-desktop: 2.25rem;
-$header-height: 8.5rem;
+$body-padding-desktop: rem(36px);
+$header-height-desktop: rem(36px + 36px + 50px);
 $grid-gap: 1rem;
-$grid-gap-desktop: 2.25rem;
+$grid-gap-desktop: rem(36px);
 
 $breakpoint-sm: 600px;
